Fixed layout bug which broak clothes grid if item has long name.

--- a/catalog/static/catalog/css/main.css
+++ b/catalog/static/catalog/css/main.css
@@ -880,6 +880,7 @@ h2.title {
   font-size: 14px;
   font-weight: 400;
   color: #696763;
+  height: 50px;
 }
 
 .productinfo img{
